# wannaloot-fastapi

./: .gitignore  pyproject.toml  requirements.txt
app/: main.py
app/db/: database.py
app/jobs/: fetch_and_store.py
